---------------------------------------------------------------------------------------------------
Version: 2.0.7
  Bugfixes:
    - Fixed stone, coal, and crude oil being locked behind off-planet science packs when using "Nauvis has Only Tiberium" setting
---------------------------------------------------------------------------------------------------
Version: 2.0.6
  Bugfixes:
    - Fixed progression in Tiberium Only mode being blocked by not being Crude Oil and Uranium Ore not being minable but for real this time
    - Fixed Tiber Rocks incorrectly appearing on Nauvis on modes other than Tiberium-only
    - Fixed player taking damage while flying over Tiberium Ore in a cargo pod
    - Fixed Growth Accelerator disappearing while working
    - Fixed list of valid inputs for Tiberium Reprocessor being blank
    - Fixed missing sounds
    - Fixed Growth Accelerator not accepting quality Tiberium Substrate
    - Fixed Tiberium Monocultures not allowing quality recipes
---------------------------------------------------------------------------------------------------
Version: 2.0.5
  Bugfixes:
    - Fixed FindRecipeTech crash when used with mods that changed gear or brick recipe
    - Fixed icon for Tiberium Ore and Tiberium Ore Centrifuging
    - Fixed crash and hid irrelevant planet settings when Space Age is disabled. If you are still crashing, use the restore mod default settings option and then redo your settings after you stop crashing
    - Fixed centrifuging recipes having no products when using the "Nauvis has Only Tiberium" option
---------------------------------------------------------------------------------------------------
Version: 2.0.4
  Bugfixes:
    - Added missing Growth Acclerator recipe name
    - Fixed crash from other mods disabling rocks and decoratives
    - Fixed crash from other mods adding planets (oops)
---------------------------------------------------------------------------------------------------
Version: 2.0.3
  Bugfixes: