@@ -2,7 +2,7 @@ local tiberiumNodeHarvester = flib.copy_prototype(data.raw["mining-drill"]["elec
 tiberiumNodeHarvester.icons = util.copy(data.raw["mining-drill"]["pumpjack"].icons)
 tiberiumNodeHarvester.icon_size = 64
 tiberiumNodeHarvester.base_picture = data.raw["mining-drill"]["pumpjack"].base_picture
-tiberiumNodeHarvester.animations = data.raw["mining-drill"]["pumpjack"].animations
+tiberiumNodeHarvester.graphics_set = data.raw["mining-drill"]["pumpjack"].graphics_set
 tiberiumNodeHarvester.mining_speed = 10
 tiberiumNodeHarvester.subgroup = "a-buildings"
 tiberiumNodeHarvester.order = "l"
