@@ -4,7 +4,7 @@ tiberiumNodeHarvester.icon_size = 64
 tiberiumNodeHarvester.icon_mipmaps = nil
 tiberiumNodeHarvester.base_picture = data.raw["mining-drill"]["pumpjack"].base_picture
 tiberiumNodeHarvester.radius_visualisation_picture = data.raw["mining-drill"]["pumpjack"].radius_visualisation_picture
-tiberiumNodeHarvester.animations = data.raw["mining-drill"]["pumpjack"].animations
+tiberiumNodeHarvester.graphics_set = data.raw["mining-drill"]["pumpjack"].graphics_set
 tiberiumNodeHarvester.mining_speed = 5
 tiberiumNodeHarvester.subgroup = "a-buildings"
 tiberiumNodeHarvester.order = "e"
